src/main/java/com/example/demo/paypal/res/error/create/PayPalErrorLinks.java
package com.example.demo.paypal.res.error.create;

import lombok.Data;

@Data
public class PayPalErrorLinks {

	private String href;
	private String rel;
	private String encType;
}
